# terminal-note

./: MANIFEST.in  Makefile  README-ru.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml  run_test.yml
backend/: __init__.py  config.py  config.toml  file_handler.py  kernel.py  service_create_on_template.py  service_edit.py  service_inline_note.py  services.py  sql_handler.py  strategy.py
tests/: fixture.py  test_config.py  test_file_handler.py  test_file_handler_2.py  test_file_handler_create.py  test_file_handler_inline_note.py  test_file_handler_read.py
tests/terminal_note/: SQL Case - When.md  SQL Distinct.md  SQL Filter.md  SQL group_by.md  SQL json_agg vs ORM.md  SQL Агрегатные функции.md  SQL Многие ко многим.md  SQL Один к одному.md
