[project]
name = "terminal-note"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "frogmouth>=0.9.2",
    "iterfzf>=1.8.0.62.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pylint>=3.3.7",
    "pytest>=8.4.1",
    "ruff>=0.11.12",
]

[tool.uv]
package = true


[project.scripts]
tn = "backend.services:main"
