[project]
name = "terminal-note"
version = "0.9.0"
description = "Простая консольная утилита для управления файлами заметок."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "frogmouth>=0.9.2",
    "iterfzf>=1.8.0.62.0",
]

[build-system]
requires = ["setuptools>=74.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
backend = ["config.toml"]

[dependency-groups]
dev = []

[tool.uv]
package = true

[project.scripts]
tn = "backend.services:main"
